fix: stable scrollbar gutter

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,3 +1,8 @@
+html, body {
+  scrollbar-gutter: stable;
+  padding-right: 0px !important; /* override, MUI adds padding when it hides scrollbar */
+}
+
 * {
   box-sizing: border-box;
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
